GNOME Bugzilla – Bug 791127
Assertion failed in DhBookManager
Last modified: 2017-12-29 18:49:11 UTC
I was happily reading documentation in Devhelp while suddenly it crashed. The command `jhbuild buildone vala` was running in the background, I think the crash occurred during the install phase (the command has finished successfully). Message on the terminal: Devhelp:ERROR:dh-book-manager.c:392:book_manager_dec_language: assertion failed: (li != NULL) Aborted (core dumped) Backtrace: (gdb) bt
+ Trace 238210
Fixed with commit db83bca14214feb78442ba78c70054b8e606145c.